--- a/shiamPortfolio/blog/templates/blog/all_blogs.html
+++ b/shiamPortfolio/blog/templates/blog/all_blogs.html
@@ -1,35 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Title</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+{% extends "portfolio/base.html" %} {% load static %} {% block content %}
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <h2 class="text-center">Blogs</h2>
+<h1 id="blogtitle" class="font-weight-bold text-center">Blog</h1>
 
-    <div class="container">
-      {% for blog in blogs %}
-      <div class="row border border-dark p-4">
-        <a href="{% url 'blog:detail' blog.id %}">
-          <h4>{{blog.title}}</h4>
-        </a>
-        <p>{{blog.description}}</p>
-        Created at
-        <p>{{blog.dateCreated}}</p>
-      </div>
-      {% endfor %}
-    </div>
-  </body>
-</html>
+<h3 class="text-center mb-5">
+  Shiam has written {{ blogs.count }} blog{{ blogs.count|pluralize }}
+</h3>
+
+{% for blog in blogs %}
+<div class="row justify-content-center my-3">
+  <div class="col-md-10">
+    <a href="{% url 'blog:detail' blog.id %}">
+      <h2>{{ blog.title }}</h2>
+    </a>
+    <h5 class="text-muted">{{ blog.date|date:'M d Y'|upper }}</h5>
+    <h4>{{ blog.description|striptags|truncatechars:100 }}</h4>
+  </div>
+</div>
+{% endfor %} {% endblock %}
