--- a/shiamPortfolio/portfolio/templates/portfolio/home.html
+++ b/shiamPortfolio/portfolio/templates/portfolio/home.html
@@ -1,18 +1,46 @@
-<h2>Shiam Portfolio</h2>
-{% load static %}
-<img src="{% static 'portfolio/profile.jpg' %}" alt="" />
+{% extends "portfolio/base.html" %} {% load static %} {% block content %}
 
-<a href="{% static 'portfolio/cv.pdf' %}">Resume</a>
-{% for pro in projects %}
-<br />
-{{pro.title}}
+<div class="row justify-content-center my-3">
+  <div class="col-5">
+    <img
+      src="{% static 'portfolio/profile.jpg' %}"
+      class="img-fluid rounded float"
+    />
+  </div>
+</div>
 
-<br />
-{{ pro.description }}
-<br />
+<div class="row justify-content-center mb-3">
+  <div class="col-md-9 text-center">
+    <h1 id="hometext" class="font-weight-bold">
+      Hi I'm Shiam. A tech entusiast from Bangladesh.
+    </h1>
+  </div>
+</div>
 
-<img src="{{pro.image.url}}" alt="" height="30" width="30" />
-{% if pro.url %}
+<h1 class="mt-5">Projects</h1>
+<hr />
+<div class="row">
+  {% for project in projects %}
+  <div class="col-lg-4 col-md-6 px-0">
+    <div class="container">
+      {% if project.url %}
+      <a href="{{ project.url }}">
+        <img
+          src="{{ project.image.url }}"
+          class="img-fluid img-thumbnail mb-2"
+        />
+      </a>
+      {% else %}
 
-<a href="{{pro.url}}">Link</a>
-{% endif %} {% endfor %}
+      <img src="{{ project.image.url }}" class="img-fluid img-thumbnail mb-2" />
+      {% endif %}
+
+      <h3>{{ project.title }}</h3>
+      <p>{{ project.description }}</p>
+    </div>
+  </div>
+
+  {% endfor %}
+</div>
+
+{% endblock %}
